--- a/project/package.json
+++ b/project/package.json
@@ -6,12 +6,14 @@
     "@babel/core": "^7.23.9",
     "bootstrap": "^4.6.2",
     "chart.js": "3.9.1",
+    "global": "^4.4.0",
     "perfect-scrollbar": "^1.5.5",
     "react": ">=16.8.0",
     "react-chartjs-2": "^3.3.0",
     "react-dom": ">=16.8.0",
     "react-notification-alert": "^0.0.13",
     "react-router-dom": "^6.11.1",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.10.0",
     "sass": "1.62.1"
