--- a/project/package.json
+++ b/project/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.23.9",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^6.19.4",
     "assert": "^2.1.0",
     "axios": "^1.6.7",
     "bootstrap": "^4.6.2",
     "buffer": "^6.0.3",
     "chart.js": "3.9.1",
     "cheerio": "^1.0.0-rc.12",
+    "dayjs": "^1.11.10",
     "global": "^4.4.0",
     "http-proxy-middleware": "^2.0.6",
     "perfect-scrollbar": "^1.5.5",
