--- a/project/package.json
+++ b/project/package.json
@@ -2,6 +2,7 @@
   "name": "paper-dashboard-react",
   "version": "1.3.2",
   "private": true,
+  "proxy" :"http://localhost:3000",
   "dependencies": {
     "@babel/core": "^7.23.9",
     "@emotion/react": "^11.11.3",
