--- a/project/package.json
+++ b/project/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^4.6.2",
     "buffer": "^6.0.3",
-    "chart.js": "3.9.1",
+    "chart.js": "^3.9.1",
     "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.10",
     "global": "^4.4.0",
