--- a/project/package.json
+++ b/project/package.json
@@ -22,6 +22,7 @@
     "perfect-scrollbar": "^1.5.5",
     "react": ">=16.8.0",
     "react-bootstrap": "^2.10.1",
+    "react-chartist": "^0.14.4",
     "react-chartjs-2": "^3.3.0",
     "react-cookie": "^7.1.0",
     "react-dom": ">=16.8.0",
