--- a/project/package.json
+++ b/project/package.json
@@ -15,7 +15,9 @@
     "buffer": "^6.0.3",
     "chart.js": "^3.9.1",
     "cheerio": "^1.0.0-rc.12",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
+    "env-cmd": "^10.1.0",
     "global": "^4.4.0",
     "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.5",
@@ -36,8 +38,9 @@
     "vite": "^5.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f .env.local react-scripts start",
+    "build": "env-cmd -f .env.local react-scripts build",
+    "build:dev": "env-cmd -f .env.development react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
